--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </label>
             
             <label class="label-main">
-                Converter <b>para: </b>
+                <b>Para: </b>
                 <select class="currency-select-target"> 
                     <option value="dolar">US$ Dólar americano</option>
                     <option value="euro">€ Euro</option>
@@ -35,7 +35,12 @@
 
             <label class="label-main">
                 <b>Valor: </b>
-                <input class="input-currency-value" type="text" placeholder="Ex: R$ 10.000,00">
+                <input 
+                class="input-currency-value" 
+                type="text" 
+                placeholder="Ex: R$ 10.000,00"
+                oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"
+                />
             </label>
 
             <button class="convert-button">Converter</button>
