Comment on HTML

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"
                 />
             </label>
+            <!--o código 'oninput' serve para anular a digitação de letars, recebendo apenas números e ponto-->
 
             <button class="convert-button">Converter</button>
         </section>
