--- a/index.html
+++ b/index.html
@@ -1,68 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Convert Money Js</title>
-</head>
-<body>
-    <img src="./assets/logo-unscreen.gif" alt="logo-convert-money" class="img-header">
+  </head>
+  <body>
+    <img
+      src="./assets/logo-unscreen.gif"
+      alt="logo-convert-money"
+      class="img-header"
+    />
     <main>
-        <section class="section-main">
-            <label class="label-main">
-                Converter <b>de: </b>
-                <select class="select-to-convert">
-                    <option value="real">R$ Real brasileiro</option>
-                    <option value="dolar">US$ Dólar americano</option>
-                    <option value="euro">€ Euro</option>
-                    <option value="libra">£ Libra</option>
-                </select>
-            </label>
-            
-            <label class="label-main">
-                <b>Para: </b>
-                <select class="currency-select-target"> 
-                    <option value="dolar">US$ Dólar americano</option>
-                    <option value="euro">€ Euro</option>
-                    <option value="libra">£ Libra</option>
-                    <option value="real">R$ Real Brasileiro</option>
-                </select>
-            </label>
+      <section class="section-main">
+        <label class="label-main">
+          Converter <b>de: </b>
+          <select class="select-to-convert">
+            <option value="real">R$ Real brasileiro</option>
+            <option value="dolar">US$ Dólar americano</option>
+            <option value="euro">€ Euro</option>
+            <option value="libra">£ Libra</option>
+          </select>
+        </label>
 
-            <label class="label-main">
-                <b>Valor: </b>
-                <input 
-                class="input-currency-value" 
-                type="text" 
-                placeholder="Ex: R$ 10.000,00"
-                oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"
-                />
-            </label>
-            <!--o código 'oninput' serve para anular a digitação de letars, recebendo apenas números e ponto-->
+        <label class="label-main">
+          <b>Para: </b>
+          <select class="currency-select-target">
+            <option value="dolar">US$ Dólar americano</option>
+            <option value="euro">€ Euro</option>
+            <option value="libra">£ Libra</option>
+            <option value="real">R$ Real Brasileiro</option>
+          </select>
+        </label>
 
-            <button class="convert-button">Converter</button>
-        </section>
-        <section class="currency-section">
-            <div class="currency">
-                <img class="currency-to-convet-img" src="./assets/real.png" alt="logo-moeda-a-converter">
-                <p class="p-currency currency-to-convert">Real Brasileiro</p>
-                <p class="p-value value-to-convert">R$ 0</p>
-            </div>
-            <img src="./assets/arrow.png" alt="arrow" class="arrow-currency">
-            <div class="currency">
-                <img class="currency-img" src="./assets/dolar.png" alt="logo-moeda-a-ser-convertida">
-                <p class="p-currency currency-target">Dólar Americano</p>
-                <p class="p-value value-target">US$ 0</p>
-            </div>
-        </section>
+        <label class="label-main">
+          <b>Valor: </b>
+          <input
+            class="input-currency-value"
+            type="text"
+            placeholder="Ex: R$ 10.000,00"
+            oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"
+          />
+        </label>
+        <!--o código 'oninput' serve para anular a digitação de letars, recebendo apenas números e ponto-->
+
+        <button class="convert-button">Converter</button>
+      </section>
+      <section class="currency-section">
+        <div class="currency">
+          <img
+            class="currency-to-convet-img"
+            src="./assets/real.png"
+            alt="logo-moeda-a-converter"
+          />
+          <p class="p-currency currency-to-convert">Real Brasileiro</p>
+          <p class="p-value value-to-convert">R$ 0</p>
+        </div>
+        <img src="./assets/arrow.png" alt="arrow" class="arrow-currency" />
+        <div class="currency">
+          <img
+            class="currency-img"
+            src="./assets/dolar.png"
+            alt="logo-moeda-a-ser-convertida"
+          />
+          <p class="p-currency currency-target">Dólar Americano</p>
+          <p class="p-value value-target">US$ 0</p>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-        <p>Developed by Giuseppe Barbetta &copy</p>
+      <p>Developed by Giuseppe Barbetta &copy</p>
     </footer>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
