improve css and responsive

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
             src="./assets/real.png"
             alt="logo-moeda-a-converter"
           />
-          <p class="p-currency currency-to-convert">Real Brasileiro</p>
-          <p class="p-value value-to-convert">R$ 0</p>
+          <div class="currencyLabel">
+            <p class="p-currency currency-to-convert">Real Brasileiro</p>
+            <p class="p-value value-to-convert">R$ 0</p>
+          </div>
         </div>
         <img src="./assets/arrow.png" alt="arrow" class="arrow-currency" />
         <div class="currency">
@@ -70,14 +72,13 @@
             src="./assets/dolar.png"
             alt="logo-moeda-a-ser-convertida"
           />
-          <p class="p-currency currency-target">Dólar Americano</p>
-          <p class="p-value value-target">US$ 0</p>
+          <div class="currencyLabel">
+            <p class="p-currency currency-target">Dólar Americano</p>
+            <p class="p-value value-target">US$ 0</p>
+          </div>
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <p>Developed by Giuseppe Barbetta &copy</p>
-    </footer>
     <script src="index.js"></script>
   </body>
 </html>
